Editor: Improve splitting format range performance

Instead of copying the list and move some items individualy from
one list to the other use Utils::partition.

Fixes: QTCREATORBUG-23281
Change-Id: Iaf9430c041aa916feecf9214303ba30f17290ba8
Reviewed-by: Eike Ziller <eike.ziller@qt.io>